<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICampGeoFence</string>
    <string name="action_settings">Settings</string>
    <string name="add_fence">Add New GeoFence</string>
    <string name="lat_prompt">Latitude:</string>
    <string name="long_prompt">Longitude:</string>
    <string name="radius_prompt">Radius (meters):</string>
    <string name="lat_hint">eg: 40.6700000</string>
    <string name="long_hint">eg: 73.9400000</string>
    <string name="add_fence_desc">Create a circular geofence by entering the center coordinates and radius:</string>
    <string name="default_radius">1000</string>
    <string name="add_btn_label">Add</string>
    <string name="delete_all_btn_label">Delete All</string>
    <string name="fence_list_title">Existing geofences. Long press to delete.</string>
    <string name="current_loc_btn_desc">Use current location as origin</string>
    <string name="title_activity_add_fence">Add New Geofence</string>
    <string name="about_menu_label">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_version_label">Version 0.0.1</string>
    <string name="about_copyright_label">Copyright @ 2014</string>
    <string name="confirm_fence_delete_prompt">Permanently delete geofence?</string>
    <string name="useCurrentLocation_label">(Use Current Location)</string>
    <string name="fenceName_prompt">GeoFence Name:</string>
    <string name="fenceType_prompt">GeoFence Type:</string>
    <string name="fenceName_hint">e.g.:  Home</string>
    <string name="service_toggle_menu_label">Geofence Intent Service</string>
    <string name="selectGeoFenceType">Select the GeoFence type</string>
    <string-array name="GeoFenceType_array">
        <item>Enter</item>
        <item>Exit</item>
        <item>Enter or Exit</item>
        <item>Dwell</item>
    </string-array>
    <string name="service_toggle_movemgr_label">Movement Manager Updates</string>
    <string name="delete_all_fences_label">Delete all geofences</string>
    <string name="load_default_fences_label">Load default geofences</string>
    <string name="dwell_time_prompt">Dwell Time (s):</string>
    <string name="default_dwell">30</string>
    <string name="toggle_sounds_label">Audio Alerts</string>
</resources>
