<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:useDefaultMargins="true"
       android:alignmentMode="alignBounds"
       android:columnOrderPreserved="false"
       android:columnCount="3">
        
	    <TextView 
		    android:layout_columnSpan="3"
		    android:layout_gravity="left"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
		    android:text="@string/add_fence_desc" />
	    
	    <TextView
		    android:layout_marginTop="10dp"
		    android:layout_column="0"
	        android:layout_gravity="right|center_vertical"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:text="@string/fenceName_prompt" />

		
	    <EditText android:id="@+id/fence_name"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"  
	        android:hint="@string/fenceName_hint"
	        android:inputType="textCapSentences" />

	    <TextView
		    android:layout_marginTop="10dp"
		    android:layout_column="0"
	        android:layout_gravity="right|center_vertical"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:text="@string/fenceType_prompt" />
	    	    	    	    
	    <Spinner
	        android:id="@+id/fence_type"
	        android:entries="@array/GeoFenceType_array"
	        android:prompt="@string/selectGeoFenceType" />
	    	    
		<TextView
		    android:layout_marginTop="10dp"
		    android:layout_column="0"
	        android:layout_gravity="right|center_vertical"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:text="@string/lat_prompt" />
		
	    <EditText android:id="@+id/new_lat"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:hint="@string/lat_hint"
	        android:inputType="numberDecimal|numberSigned" />
		
	    <TextView
		    android:layout_marginTop="10dp"
		    android:layout_column="0"
	        android:layout_gravity="right|center_vertical"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:text="@string/long_prompt" />
				
		<EditText android:id="@+id/new_long"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:hint="@string/long_hint"
	        android:inputType="numberDecimal|numberSigned" />
					
		<TextView
		    android:layout_marginTop="10dp"
		    android:layout_column="0"
			android:layout_gravity="right|center_vertical"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:text="@string/radius_prompt" />
		
		<EditText android:id="@+id/new_radius"
		    style="@android:style/TextAppearance.DeviceDefault.Medium"
	        android:text="@string/default_radius"
	        android:inputType="number" />

		<ImageButton
		    android:layout_column="1"
		    android:layout_gravity="left|center_vertical"
		    android:layout_row="6"
		    android:contentDescription="@string/current_loc_btn_desc"
		    android:onClick="useCurrentLocation"
		    android:src="@drawable/gps13" />

		<ImageButton
		    android:layout_column="2"
		    android:layout_gravity="left|center_vertical"
		    android:layout_row="6"
		    android:contentDescription="@string/current_loc_btn_desc"
		    android:onClick="useLmCurrentLocation"
		    android:src="@drawable/gps13" />

		<TextView
		    android:id="@+id/textView1"
		    android:layout_column="0"
		    android:layout_gravity="center"
		    android:layout_row="6"
		    android:text="@string/useCurrentLocation_label"
		    android:textAppearance="?android:attr/textAppearanceSmall" />
		
		<Button
		    style="@android:style/TextAppearance.DeviceDefault.Small"
		    android:layout_column="1"
		    android:layout_gravity="top"
		    android:layout_marginTop="40dp"
		    android:layout_row="7"
		    android:onClick="addFence"
		    android:text="@string/add_btn_label" />

</GridLayout>
